--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#ea043e</color>
+    <color name="colorPrimaryDark">#ea043e</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBlanco">#fff</color>
+    <color name="colorBorder">#fff</color>
+    <color name="colorHint">#c8ffffff</color>
 </resources>
