--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/imgfondo"
-    tools:context=".net.azurewebsites.acceso.LoginActivity">
+    tools:context=".net.azurewebsites.acceso.RegistrarseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +36,18 @@
             android:background="@drawable/styleround"/>
 
         <EditText
+            android:id="@+id/user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorBlanco"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:hint="@string/hint_user_name"
+            android:textColorHint="@color/colorHint"
+            android:background="@drawable/styleround"/>
+
+
+        <EditText
             android:id="@+id/edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,20 +61,21 @@
             android:background="@drawable/styleround"/>
 
         <Button
-            android:id="@+id/btn_iniciar_sesion"
+            android:id="@+id/btn_registrase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_iniciar_sesion"
+            android:text="@string/btn_registrarse"
             android:layout_marginTop="40dp"
             android:background="@color/colorPrimary"
             android:textColor="@color/colorBlanco"/>
 
         <Button
-            android:id="@+id/btn_registrase"
+            android:id="@+id/btn_iniciar_sesion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_registrarse"
+            android:text="@string/btn_iniciar_sesion"
             android:layout_marginTop="8dp"
             android:background="@color/colorBlanco" />
+
     </LinearLayout>
 </ScrollView>
