--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBlanco">#fff</color>
     <color name="colorBorder">#fff</color>
     <color name="colorHint">#c8ffffff</color>
+    <color name="colorNegro">#000</color>
 </resources>
