--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="15dp">
 
@@ -16,7 +16,7 @@
             android:id="@+id/text_app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="@string/iniciar_sesion"
             android:textSize="50sp"
             android:textColor="@color/colorBlanco"
             android:gravity="center_horizontal"
@@ -32,13 +32,15 @@
             android:padding="10dp"
             android:hint="@string/hint_email"
             android:textColorHint="@color/colorHint"
-            android:background="@drawable/styleround"/>
+            android:singleLine="true"
+            android:background="@drawable/styleround"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:password="true"
+            android:inputType="textPassword"
             android:hint="@string/hint_password"
             android:textColorHint="@color/colorHint"
             android:textColor="@color/colorBlanco"
