--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="15dp">
 
@@ -17,7 +16,7 @@
             android:id="@+id/text_app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="@string/registrarse"
             android:textSize="50sp"
             android:textColor="@color/colorBlanco"
             android:gravity="center_horizontal"
@@ -33,25 +32,27 @@
             android:padding="10dp"
             android:hint="@string/hint_email"
             android:textColorHint="@color/colorHint"
-            android:background="@drawable/styleround"/>
+            android:background="@drawable/styleround"
+            android:inputType="textEmailAddress" />
 
         <EditText
-            android:id="@+id/user_name"
+            android:id="@+id/edit_text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlanco"
-            android:padding="10dp"
             android:layout_marginTop="10dp"
-            android:hint="@string/hint_user_name"
+            android:padding="10dp"
+            android:hint="@string/hint_name"
             android:textColorHint="@color/colorHint"
-            android:background="@drawable/styleround"/>
+            android:background="@drawable/styleround"
+            android:inputType="text" />
 
 
         <EditText
             android:id="@+id/edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:password="true"
+            android:inputType="textPassword"
             android:hint="@string/hint_password"
             android:textColorHint="@color/colorHint"
             android:textColor="@color/colorBlanco"
@@ -76,6 +77,5 @@
             android:text="@string/btn_iniciar_sesion"
             android:layout_marginTop="8dp"
             android:background="@color/colorBlanco" />
-
     </LinearLayout>
 </ScrollView>
