--- a/app/src/main/res/layout/app_bar_inicio.xml
+++ b/app/src/main/res/layout/app_bar_inicio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InicioActivity">
+    tools:context=".net.azurewebsites.vista.InicioActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:text="@string/app_name"
                 android:layout_gravity="center"
                 android:textColor="@color/colorBlanco"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:id="@+id/toolbar_title" />
 
         </android.support.v7.widget.Toolbar>
