--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InicioFragment">
+    tools:context=".net.azurewebsites.vista.InicioFragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -25,7 +25,8 @@
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:padding="5dp"
-                            android:src="@drawable/ic_menu_camera" />
+                            android:src="@drawable/ic_menu_camera"
+                            tools:ignore="ContentDescription" />
 
                         <TextView
                             android:id="@+id/user_name"
@@ -33,21 +34,40 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:layout_marginLeft="10dp"
-                            android:text="Luis Rafael Geraldo"
+                            android:text="@string/my_name"
                             android:textColor="@color/colorNegro"
                             android:textSize="15sp"
-                            android:layout_toRightOf="@+id/user_foto_principal" />
+                            android:layout_toRightOf="@+id/user_foto_principal"
+                            android:layout_toEndOf="@+id/user_foto_principal"
+                            android:layout_marginStart="10dp"
+                            tools:ignore="RelativeOverlap" />
 
                         <TextView
                             android:id="@+id/ubicacion_user"
-                            android:layout_width="wrap_content"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="28dp"
                             android:layout_marginLeft="10dp"
-                            android:text="Sector italia, san isidro"
+                            android:text="@string/my_sector"
                             android:textColor="@color/colorNegro"
                             android:textSize="10sp"
-                            android:layout_toRightOf="@+id/user_foto_principal" />
+                            android:layout_toRightOf="@+id/user_foto_principal"
+                            android:layout_toEndOf="@+id/user_foto_principal"
+                            tools:ignore="RelativeOverlap,SmallSp"
+                            android:layout_marginStart="10dp" />
+
+                            <ImageView
+                                android:id="@+id/btn_config"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:src="@drawable/share"
+                                android:layout_alignParentRight="true"
+                                android:layout_marginTop="15dp"
+                                android:layout_marginRight="18dp"
+                                android:layout_marginEnd="18dp"
+                                android:layout_alignParentEnd="true"
+                                tools:ignore="ContentDescription" />
+
                     </RelativeLayout>
 
                 <ImageView
@@ -56,7 +76,8 @@
                     android:layout_height="250dp"
                     android:scaleType="centerCrop"
                     android:layout_gravity="center"
-                    android:src="@drawable/imgfondo"/>
+                    android:src="@drawable/imgfondo"
+                    tools:ignore="ContentDescription" />
 
 
                 <RelativeLayout
@@ -81,7 +102,8 @@
                         android:button="@drawable/checkarchivar"
                         android:checked="false"
                         android:layout_marginLeft="40dp"
-                        android:textAppearance="?android:attr/textAppearanceLarge"/>
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:layout_marginStart="40dp" />
 
                 </RelativeLayout>
 
@@ -100,7 +122,8 @@
                         android:layout_marginLeft="10dp"
                         android:text="@string/descripcion_text"
                         android:textColor="@color/colorNegro"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp"
+                        android:layout_marginStart="10dp" />
 
                     <TextView
                         android:id="@+id/descripcion_publicacion"
@@ -108,12 +131,14 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="28dp"
-                        android:text=" Texto de  prueba"
                         android:layout_marginLeft="4dp"
+                        android:text="@string/app_name"
                         android:textColor="@color/colorNegro"
-                        android:textSize="10sp" />
+                        android:textSize="10sp"
+                        android:layout_marginStart="4dp"
+                        tools:ignore="SmallSp" />
                 </RelativeLayout>
-
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </FrameLayout>
