--- a/app/src/main/res/layout/fragment_list_fotos.xml
+++ b/app/src/main/res/layout/fragment_list_fotos.xml
@@ -3,19 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFotosFragment">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    tools:context=".net.azurewebsites.vista.ListFotosFragment">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/my_recycler_view"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"/>
 
+        <TextView
+            android:id="@+id/text_no_publicacion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textAlignment="center"/>
 
-        </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
 </FrameLayout>
