--- a/app/src/main/res/layout/activity_configure.xml
+++ b/app/src/main/res/layout/activity_configure.xml
@@ -33,14 +33,8 @@
 
             <ImageView
                 android:id="@+id/foto_perfil"
-                android:layout_margin="35dp"
-                android:padding="25dp"
-                android:layout_width="220dp"
-                android:layout_height="220dp"
-                android:layout_gravity="center"
-                app:layout_anchor="@id/app_bar" />
-
-
+                app:layout_anchor="@id/app_bar"
+                style="@style/foto_perfil" />
         </android.support.design.widget.CollapsingToolbarLayout>
 
 
