--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="img_perfil_width">220dp</dimen>
+    <dimen name="img_perfil_height">220dp</dimen>
+    <dimen name="img_view_width">80dp</dimen>
+    <dimen name="img_view_height">80dp</dimen>
+    <dimen name="dimens_90dp">90dp</dimen>
+    <dimen name="dimens_foto_logo">50dp</dimen>
 </resources>
