--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,136 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="foto_perfil">
+        <item name="android:layout_margin">35dp</item>
+        <item name="android:padding">25dp</item>
+        <item name="android:layout_width">@dimen/img_perfil_width</item>
+        <item name="android:layout_height">@dimen/img_perfil_height</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="titulo_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">50sp</item>
+        <item name="android:textColor">@color/colorBlanco</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="edit_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/colorBlanco</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textColorHint">@color/colorHint</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:background">@drawable/styleround</item>
+    </style>
+
+    <style name="botones_style_primary">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/colorBlanco</item>
+    </style>
+
+    <style name="botones_style_blanco">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorBlanco</item>
+    </style>
+
+    <style name="text_view_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textColor">@color/colorBlanco</item>
+    </style>
+
+    <style name="edit_descripcion">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/img_view_height</item>
+        <item name="android:textColor">@color/colorBlanco</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_marginLeft">@dimen/dimens_90dp</item>
+        <item name="android:textColorHint">#a3a3a3</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/styleround</item>
+        <item name="android:layout_marginStart">@dimen/dimens_90dp</item>
+    </style>
+
+    <style name="nav_header_layout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/nav_header_height</item>
+        <item name="android:background">@drawable/side_nav_bar</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
+        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
+    </style>
+
+    <style name="linear_layout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="text_view_publicacion">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:textColor">@color/colorNegro</item>
+        <item name="android:layout_toRightOf">@+id/user_foto_principal</item>
+        <item name="android:layout_toEndOf">@+id/user_foto_principal</item>
+        <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+    <style name="text_view_user_footer">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:textColor">@color/colorNegro</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+    <style name="text_descripcion_publicacion">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_marginTop">28dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:textColor">@color/colorNegro</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:layout_marginStart">4dp</item>
+    </style>
+
+    <style name="check_box_action">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:checked">false</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+    </style>
+
+    <style name="foto_publicacion">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">250dp</item>
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="boton_configuracion">
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginRight">18dp</item>
+        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:layout_alignParentEnd">true</item>
+    </style>
+
 </resources>
